<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemoteControlClient</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="sound">Sound</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="playPause">Play/Pause</string>
    <string name="pcSpeakers">PC Speakers</string>
    <string name="digitalOut">Digital Out</string>
    <string name="hdmi">HDMI</string>
    <string name="reloadSetup">Reload Setup</string>

</resources>
