<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="2" >

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="left"
            android:layout_row="0"
            android:onClick="sendMessage"
            android:text="@string/next" />

        <Button
            android:id="@+id/playPauseButton"
            android:layout_column="1"
            android:layout_gravity="left"
            android:onClick="sendMessage"
            android:text="@string/playPause" />

        <Button
            android:id="@+id/previousButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left"
            android:layout_row="0"
            android:onClick="sendMessage"
            android:text="@string/previous" />

    </GridLayout>

    <RadioButton
        android:id="@+id/selectPcSpeaker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        android:text="@string/pcSpeakers" />

    <RadioButton
        android:id="@+id/selectDigitalOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        android:text="@string/digitalOut" />

    <RadioButton
        android:id="@+id/selectHdmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        android:text="@string/hdmi" />

</LinearLayout>
